1. added collapse in comments for better UX 2. responsive controls for person carousel 3. empty cast handling in person carousel 4. fix chips text and icon alignment 5. some css changes

--- a/src/components/comment/comment.module.css
+++ b/src/components/comment/comment.module.css
@@ -53,6 +53,16 @@
   justify-content: center;
 }
 
-.end {
-  justify-content: end;
+.sb {
+  justify-content: space-between;
+}
+
+.collapse.hidden {
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.collapse.visible {
+  visibility: visible;
+  pointer-events: auto;
 }
