--- a/src/pages/searchPage/searchPage.module.css
+++ b/src/pages/searchPage/searchPage.module.css
@@ -46,9 +46,9 @@
   width: 100%;
   padding: 0;
   text-align: center;
+  justify-content: center;
 
   span {
-    width: 100%;
     font-size: 16px;
   }
 }
